fix not align to center

--- a/css/double-bounce.css
+++ b/css/double-bounce.css
@@ -4,7 +4,7 @@
 .ajax-double-bounce {
   width: 27px;
   height: 27px;
-
+  margin: auto;
   position: relative;
 }
 
